feat: add localization lag in some files

--- a/src/i18n/pt_BR.json
+++ b/src/i18n/pt_BR.json
@@ -5,6 +5,12 @@
     "Password": "Senha",
     "Enter your password" : "Entre com sua senha",
     "Log in" : "Entrar",
-    "Students" : "Estudantes"
+    "Students" : "Estudantes",
+    "Name" : "Nome",
+    "document" : "CPF",
+    "Actions": "Ações",
+    "Student Inquiry": "Consulta de alunos" ,
+    "Enter your search": "Digite sua busca",
+    "Logout" : "Sair"
 }
   
