fix: add document translation

--- a/src/i18n/pt_BR.json
+++ b/src/i18n/pt_BR.json
@@ -7,7 +7,7 @@
   "Log in": "Entrar",
   "Students": "Estudantes",
   "Name": "Nome",
-  "document": "CPF",
+  "Document": "CPF",
   "Actions": "Ações",
   "Student Inquiry": "Consulta de alunos",
   "Enter your search": "Digite sua busca",
