feat: first version of form students wiht create and update fields

--- a/src/i18n/pt_BR.json
+++ b/src/i18n/pt_BR.json
@@ -11,5 +11,7 @@
   "Actions": "Ações",
   "Student Inquiry": "Consulta de alunos",
   "Enter your search": "Digite sua busca",
-  "Logout": "Sair"
+  "Logout": "Sair",
+  "Create student": "Cadastrar estudante",
+  "Edit student": "Editar estudante"
 }
