--- a/src/i18n/pt_BR.json
+++ b/src/i18n/pt_BR.json
@@ -9,6 +9,7 @@
   "Name": "Nome",
   "Document": "CPF",
   "Actions": "Ações",
+  "Registration number" : "RA",
   "Student Inquiry": "Consulta de alunos",
   "Enter your search": "Digite sua busca",
   "Logout": "Sair",
@@ -17,5 +18,11 @@
   "Are you sure you want to delete the student": "Tem certeza que deseja excluir o estudante",
   "Confirmation" : "Confirmação",
   "Confirm": "Confirmar",
-  "Cancel" : "Cancelar"
+  "Cancel" : "Cancelar",
+  "Registration number is required" : "RA é obrigatório",
+  "Registration number must be 8 characters long" : "RA deve ter 8 caracteres",
+  "CPF number is required" : "CPF é obrigatório",
+  "Email is required" : "Email é obrigatório",
+  "Email is invalid" : "Email é invalido",
+  "Name is required" : "Nome é obrigatório"
 }
